--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "pg": "^8.16.3",
-    "prisma": "^6.0.0"
+    "prisma": "^6.0.0",
+    "socket.io": "^4.8.1"
   }
 }
